--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
     
     - section: "Aulas"
       contents: 
-      - section: "Parte 1: Inferência Estatística"
+      - section: "Parte 1: Princípios da Estimação Pontual"
         contents:
           - href: aulas/1-Apresentacao_da_disciplina.qmd
             text: "1- Apresentação da Disciplina e Conceitos Iniciais"
